# trimana

./: .gitmodules  CMakeLists.txt
.github/workflows/: build-linux.yml  build-windows.yml  cmake-multi-platform.yml  multiplatform.yml
lib/: CMakeLists.txt
res/shaders/: frame_frag.glsl  frame_vert.glsl
src/core/: CMakeLists.txt
src/core/ecs/: components.hpp  ecs.hpp
src/core/entry/: core.cpp  core.hpp  init_core.hpp
src/core/events/: events.hpp  events_keyboard.hpp  events_mouse.hpp  events_window.hpp
src/core/gui/: sdl_gui.hpp
src/core/include/TrimanaCore/: core.hpp  events.hpp  events_keyboard.hpp  events_mouse.hpp  events_window.hpp  gl.hpp  layer.hpp  layer_stack.hpp  model.hpp  sdl_gui.hpp  sdl_window.hpp  window.hpp
src/core/include/core/: core.hpp  events_keyboard.hpp  gl.hpp  sdl_window.hpp  window.hpp
src/core/include/trimana_core/: core.hpp  events.hpp  gl.hpp  sdl_gui.hpp  sdl_window.hpp  window.hpp
src/core/init/: init_core.cpp
src/core/model/: model.cpp  model.hpp
src/core/renders/GL/: gl.cpp  gl.hpp
src/core/src/: core.cpp  gl.cpp  model.cpp  sdl_gui.cpp  sdl_window.cpp
src/core/utils/: logger.cpp  logger.hpp  platform.hpp
src/core/window/: sdl_window.hpp  window.cpp  window.hpp
src/engine/: CMakeLists.txt
src/engine/include/TrimanaEngine/: engine.hpp
src/engine/include/engine/: engine.hpp
src/engine/include/trimana_engine/: engine.hpp
src/engine/src/: engine.cpp  trimana.cpp
src/entry_point/: trimana.cpp
