cmake_minimum_required(VERSION 3.20)
project(TrimanaEngine VERSION 1.0.0 LANGUAGES C CXX)

set(TRIMANA_ENGINE engine)
set(TRIMANA_ENGINE_HEADERS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include/${TRIMANA_ENGINE})
set(TRIMANA_ENGINE_SOURCES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)

set(
    TRIMANA_ENGINE_HEADERS
    ${TRIMANA_ENGINE_HEADERS_DIR}/engine.hpp
)

set(
    TRIMANA_ENGINE_SOURCES
    ${TRIMANA_ENGINE_SOURCES_DIR}/engine.cpp
    ${TRIMANA_ENGINE_SOURCES_DIR}/trimana.cpp
)

add_executable(${TRIMANA_ENGINE} ${TRIMANA_EGNINE_HEADERS} ${TRIMANA_ENGINE_SOURCE})
target_include_directories(${TRIMANA_ENGINE} PUBLIC ${TRIMANA_ENGINE_HEADERS_DIR} ${TRIMANA_ENGINE_SOURCES_DIR})

target_include_directories(${TRIMANA_ENGINE} PRIVATE 
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include/${TRIMANA_ENGINE}>
    $<INSTALL_INTERFACE:include/${TRIMANA_ENGINE}>
)

target_include_directories(${TRIMANA_ENGINE} PUBLIC 
    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
    $<INSTALL_INTERFACE:include>
)

target_link_libraries(${TRIMANA_ENGINE} PRIVATE TRIMANA::CORE)