set(TRIMANA_ENGINE trimana_engine)
set(TRIMANA_ENGINE_HEADERS_DIR ${PROJECT_SOURCE_DIR}/src/engine/include/${TRIMANA_ENGINE})
set(TRIMANA_ENGINE_SOURCES_DIR ${PROJECT_SOURCE_DIR}/src/engine/src)

set(
    TRIMANA_ENGINE_HEADERS
    ${TRIMANA_ENGINE_HEADERS_DIR}/engine.hpp
)

set(
    TRIMANA_ENGINE_SOURCES
    ${TRIMANA_ENGINE_SOURCES_DIR}/engine.cpp
    ${TRIMANA_ENGINE_SOURCES_DIR}/trimana.cpp
)

add_executable(${TRIMANA_ENGINE} ${TRIMANA_ENGINE_HEADERS} ${TRIMANA_ENGINE_SOURCES})
target_include_directories(${TRIMANA_ENGINE} PUBLIC ${TRIMANA_ENGINE_HEADERS_DIR} PRIVATE ${TRIMANA_ENGINE_SOURCES_DIR})
target_link_libraries(${TRIMANA_ENGINE} PRIVATE TRIMANA::CORE)